--- a/lmap/template/base.html
+++ b/lmap/template/base.html
@@ -40,7 +40,7 @@
 
             {% markers %}
 
-            function newMAp(e) {
+            function newMap(e) {
               //map.setCenter(e.target.getPosition());
               map.setZoomAndCenter(15, e.target.getPosition());
 
